# CIRO

./: .gitignore  README.md  pyproject.toml
apps/api/: .env.example  _retry.py  main.py  orchestrator.py  scenario_synthesizer.py  smoke.py
apps/api/agents/: __init__.py  analysis.py  detection.py  impact.py  ingestion.py  planning.py  simulation.py
apps/api/schemas/: action_plan.py  candidate_incident.py  canonical_signal.py  execution_log.py  impact_report.py  models.py  situation_analysis.py
apps/api/tests/: test_analysis.py
apps/mobile/: app.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  report.tsx
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx  responder.tsx
apps/mobile/app/incident/: [id].tsx
apps/mobile/src/: api.ts  theme.ts  useLatestRun.ts
apps/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
apps/web/src/: App.tsx  api.ts  index.css  types.ts  useRunStream.ts
apps/web/src/components/: AgentGraph.tsx  CommandCenter.tsx  CrisisCreatorModal.tsx  EventFeed.tsx  Header.tsx  ImpactPanel.tsx  IncidentDetail.tsx  IncidentList.tsx  MapView.tsx
docs/: agent-specs.md  architecture.md  demo-script.md
infra/seed/: accident_islamabad.json  flood_dha.json  heatwave_lahore.json  infrastructure_karachi.json
