[project]
name = "ciro-api"
version = "0.1.0"
description = "Crisis Intelligence & Response Orchestrator - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]
